dynamix/force-app/main/default/objects/Case/fields/Complaint_category__c.field-meta.xml
<CustomField>
    <fullName>Complaint_category__c</fullName>
    <label>Complaint Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payments</fullName>
            </value>
            <value>
                <fullName>Damage/Repair</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>