dynamix/force-app/main/default/objects/Case/fields/Other_Complaint__c.field-meta.xml
<CustomField>
    <fullName>Other_Complaint__c</fullName>
    <label>Other Complaint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>