dynamix/force-app/main/default/objects/Case/validationRules/Validate_Other_Complaint.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Other_Complaint</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Complaint_category__c, &quot;Others&quot;),  
    ISBLANK(Other_Complaint__c)
)</errorConditionFormula>
    <errorDisplayField>Other_Complaint__c</errorDisplayField>
    <errorMessage>Please fill details for Other Complaint</errorMessage>
</ValidationRule>