dynamix/force-app/main/default/objects/Case/listViews/Support_Executive_Queue_Case.listView-meta.xml
<ListView>
    <fullName>Support_Executive_Queue_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Support Executive Queue</label>
    <queue>Support_Executive_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>